Fixes #28849 - Long role names are cut off in the roles UI

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -680,3 +680,13 @@ code.transparent {
   overflow-y: auto;
   max-width: 175px;
 }
+
+.table-locked-col {
+  text-align: center;
+  width: 70px;
+}
+
+.table-actions-col {
+  text-align: center;
+  width: 90px;
+}
